kubernetes/base/elodin-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metor
spec:
  ingressClassName: traefik
  defaultBackend:
    service:
      name: elo-docs
      port:
        number: 80
  rules:
  - host: docs.metor.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: elo-docs
            port:
              number: 80
